# silicon_apple_assembler

./: Cargo.toml  README.md  arm64-sandbox-api-spec.md  justfile  mise.toml  openapi.yaml
src/: analyzer.rs  api.rs  compiler.rs  dashboard.html  events.rs  executor.rs  harness.rs  lib.rs  main.rs  models.rs  rate_limiter.rs  wire_format.rs
tests/: integration_test.rs
