[package]
name = "arm64-sandbox"
version = "0.1.0"
edition = "2021"
description = "A web API that accepts ARM64 assembly, compiles and executes it in a sandbox, and returns benchmark results"

[lib]
name = "arm64_sandbox"
path = "src/lib.rs"

[[bin]]
name = "arm64-sandbox"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "time"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
tower = { version = "0.4", features = ["limit", "util"] }
tower-http = { version = "0.5", features = ["trace"] }
http = "1"
dashmap = "5"
tokio-stream = { version = "0.1", features = ["sync"] }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"